test/Fail/PathWithBoundary.err
PathWithBoundary.agda:20.1-12: error: [UnequalTerms]
suc (q + m) != m of type Nat
when checking the definition of PathWithBoundary.with-18
